tests/reject/bad_while.ul
void main() {
  while(21312.123) {}
}
